<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Quiz Champion</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="titulo">Quiz Champion</string>
	<string name="ajustes">Ajustes</string>
	<string name="partidas_por_cnt">Partidas por responder</string>
	<string name="partidas_enviadas">Partidas enviadas</string>
	<string name="mi_perfil">Mi perfil</string>
	<string name="paises_default">Elige un país</string>
 
    <string-array name="paises_array">
        <item>Spain</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
    <string name="registro1">REGISTRO (1/2)</string>
    <string name="registro2">REGISTRO (2/2)</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="apellido">Apellido</string>
    <string name="nick">Nick</string>
    <string name="pais">País</string>
    <string name="ciudad">Ciudad</string>
    <string name="siguiente">Siguiente</string>
    <string name="guardar">Guardar</string>
    <string name="chico">Chico</string>
    <string name="chica">Chica</string>
    <string name="atras">Atrás</string>
    <string name="avatar">Avatar</string>
    <string name="sonido">Sonido</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="elegirAvatar">Elija un avatar</string>
    <string name="puntuacion">Tu puntuación</string>
    <string name="enviarReto">Enviar reto</string>
	<string name="aleatorio">Aleatorio</string>
	<string name="amigo">Amigo</string>
	<string name="categoria">Categorias</string>
	<string name="elegirCategoria">Elija una categoria</string>
	<string name="jugarAleatorio">Jugar</string>
	<string name="puntuacionreto">Puntuación del reto</string>
	<string name="jugador1">Jugador1</string>
	<string name="jugador2">Jugador2</string>
	<string name="continuar">Continuar</string>
	<string name="ganado">Has ganado</string>
	<string name="perdido">Has perdido</string>
	<string name="resultado">Resultado</string>
	<string name="otracategoria">Elegir categoria para otro reto</string>
	<string name="puntuacion1">Puntuación1</string>
	<string name="puntuacion2">Puntuación2</string>
	<string name="marcador">Marcador</string>
	<string name="marcador1">Marcador1</string>
	<string name="marcador2">Marcador2</string>
	<string name="responder_reto">Responder reto</string>
	<string name="busqueda_default">Seleccione cómo buscar contrincante</string>
 
    <string-array name="busqueda_array">
        <item>Nick</item>
        <item>Email</item>
        <item>Ciudad</item>
    </string-array>
    <string name="buscar">Buscar</string>
    <string name="logros">Logros</string>
    <string name="ptr_pull_to_refresh">Tira para refrescar</string>
    <string name="ptr_release_to_refresh">Suelta para refrescar</string>
    <string name="ptr_refreshing">Refrescando</string>
    <string name="ptr_last_updated">Actualizado: %1$s</string>
    <string name="ranking">Ranking</string>
    <string name="perfil">Perfil</string>
    
</resources>
