<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Arial"
                android:gravity="center"
                android:text="PERFIL"
                android:textColor="#0066FF"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView3"
					android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/nombre" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/apellido" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/pais" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/ciudad" />

                <TextView
                    android:id="@+id/textView3"
					android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/avatar" />                                               
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/editTextNombrePerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextApellidoPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

                <Spinner
                    android:id="@+id/spinnerPaisesPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/paises_array"
                    android:prompt="@string/paises_default"
                     />

                <EditText
                    android:id="@+id/editTextCiudadPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

                <ImageView
		            android:background="@drawable/avatar2"
		            android:contentDescription="@string/ajustes"
		            android:id="@+id/ajustes"
		            android:layout_width="64dp"
		            android:layout_height="64dp"
		            android:layout_gravity="left"/>
                
            </LinearLayout>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <Button
                android:id="@+id/botonAtrasPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="125dp"
                android:layout_marginLeft="25dp"
                android:text="@string/atras" />
            
            <Button
                android:id="@+id/botonGuardarPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar" />
            
        </LinearLayout>
    </LinearLayout>

</LinearLayout>