<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:padding="25dp"
    android:orientation="vertical" >

           <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Arial"
                android:gravity="center"
                android:text="Elegir Contrincante"
                android:textColor="#0066FF"
                android:textSize="30sp"
                android:layout_marginBottom="30dp" />

            <Button
                android:id="@+id/botonAleatorio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/aleatorio" />

            <Button
                android:id="@+id/botonAmigo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/amigo" />

            <Button
                android:id="@+id/botonAtrasElegirContrincante"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/atras"
                android:layout_marginTop="30dp" />

</LinearLayout>