<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:padding="20dp"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="Arial"
                android:text="@string/marcador"
                android:textColor="#0066FF"
                android:textSize="30sp" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >
				
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/jugador1" />
				
           

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >
                
                <TextView
                    android:id="@+id/textView3"
					android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/jugador2" />  

            </LinearLayout>

        </LinearLayout>
        
		 <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >
                
                <TextView
                    android:id="@+id/textView3"
					android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/marcador1" />  

            </LinearLayout>
        
           <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >
                
                <TextView
                    android:id="@+id/textView3"
					android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/marcador2" />  

            </LinearLayout>
        </LinearLayout>
        <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

            <Button
                android:id="@+id/botonOtraCategoria"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/otracategoria" />
            
        </LinearLayout>

</LinearLayout>