<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/fondo_degradado"
    android:padding="20dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textCategorias"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="Arial"
            android:gravity="center"
            android:text="@string/categoria"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
        
        <TextView
            android:id="@+id/textViewElegirCategoria"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:fontFamily="Arial"
            android:gravity="center"
            android:text="@string/elegirCategoria"
            android:textColor="#000000"
            android:textSize="20sp" />

        <ExpandableListView
            android:id="@+id/expandableListViewCategorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ExpandableListView>
     
    </LinearLayout>

   

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:orientation="vertical" >

        <Button
            android:id="@+id/botonJugarAleatorio"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_gravity="top|center"
            android:text="@string/jugarAleatorio" />
    </LinearLayout>

</LinearLayout>
