<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:padding="20dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textPuntuacionReto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="Arial"
                android:textColor="#0066FF"
                android:textSize="20sp"
                android:text="@string/puntuacionreto" />

       
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:orientation="vertical" >
				
                <TextView
                    android:id="@+id/nombreJugador1"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#000000"/>
				<TextView
                    android:id="@+id/puntuacionJugador1"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#000000"/>
           

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                
                <TextView
                    android:id="@+id/nombreJugador2"
					android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#000000"/>
                <TextView
                    android:id="@+id/puntuacionJugador2"
					android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#000000"/>  
            </LinearLayout>

        </LinearLayout>

         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="100dp"
             android:gravity="center"
             android:orientation="horizontal" >

             <TextView
                 android:id="@+id/textResultado"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/ganado"
                 android:textColor="#000000" />

         </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >
                
            <Button
                android:id="@+id/botonContinuar"
                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/continuar" />
            
        </LinearLayout>

</LinearLayout>